--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -3,7 +3,7 @@
 {{- with $page }}
           <article class="chapter">
 {{ partial "heading-pre.html" . }}<div class="article-subheading"></div>
-<h1 id="{{ .Title | anchorize }}">{{ .Title }}</h1>{{ partial "heading-post.html" . }}
+<!-- <h1 id="{{ .Title | anchorize }}">{{ .Title }}</h1>{{ partial "heading-post.html" . }} -->
 
 {{ $content | safeHTML }}
             <footer class="footline">
